--- a/adm/html/program-edit-step1.html
+++ b/adm/html/program-edit-step1.html
@@ -105,7 +105,7 @@
                       <input type="text" class="krds-input medium" placeholder="입력" value="103" data-field="program-number">
                     </div>
                   </div>
-                  <div class="alert-wrap alert-box msg-error" data-role="program-number-alert" >
+                  <div class="alert-wrap alert-box" data-role="program-number-alert" style="display: none;">
                     <p class="alert-tit">중복된 번호입니다. <strong>102</strong>번부터 가능합니다.</p>
                   </div>
                 </div>
