--- a/adm/html/member-admin-edit.html
+++ b/adm/html/member-admin-edit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="충남교육청" />
-  <title th:text="${pageTitle}">teacher 회원가입 - 정보입력</title>
+  <title th:text="${pageTitle}">teacher 회원정보수정</title>
 
   <link rel="icon" href="/favicon.ico" />
 
@@ -39,19 +39,18 @@
         <div class="logo">
             <a href="../html/auth-admin-login.html" target="_self" title="로그인페이지로 이동"><img src="../img/logo_bk.svg" alt="충청남도교육청 단위학교사업선택제"></a>
         </div>
-        <div class="btn-wrap">
+        <!-- <div class="btn-wrap">
           <a href="#!" class="krds-btn medium text" target="_self"><i class="svg-icon ico-angle left"></i>이전 페이지로 돌아가기</a>
-        </div>
+        </div> -->
     </div>
   </header>
 
-  <main id="container" class="join">
+  <main id="container" class="join edit">
     <div class="inner">
       <div class="page-title-wrap left">
         <h1 class="h-tit">
-          정보입력
-          <span class="small-txt"><em>회원가입을 위해 아래 정보를 입력</em>해주세요.<br>가입 승인 완료 후 입력하신 정보로 로그인이 가능합니다.</span>
-        </h1>
+          정보수정
+          <span class="small-txt">회원가입 시 입력한 내용에 대해 수정하실 수 있습니다.</span>
       </div>
       <div class="contents contents-box contents-box-shadow">
         <form class="form">
@@ -60,34 +59,18 @@
             <section class="form-section">
               <div class="section-header">
                 <span class="section-number">1</span>
-                <h2 class="section-title">기본정보를 입력해주세요.</h2>
+                <h2 class="section-title">기본정보</h2>
               </div>
 
               <div class="form-fields">
-                <!-- 회원 구분 -->
+
                 <div class="form-box">
                   <div class="form-tt">
-                    <h4>회원 구분</h4>
+                    <h4>아이디</h4>
                   </div>
                   <div class="form-group">
-                    <div class="form-group-inner grade-select">
-                      <input type="radio" class="square-btn type hide-input" id="teacher-type1" name="teacher">
-                      <label for="teacher-type1" class="square-label">
-                        <span>교사</span>
-                        <i class="radio-icon"></i>
-                      </label>
-
-                      <input type="radio" class="square-btn type hide-input" id="teacher-type2" name="teacher">
-                      <label for="teacher-type2" class="square-label">
-                        <span>교감</span>
-                        <i class="radio-icon"></i>
-                      </label>
-
-                      <input type="radio" class="square-btn type hide-input" id="teacher-type3" name="teacher">
-                      <label for="teacher-type3" class="square-label">
-                        <span>교장</span>
-                        <i class="radio-icon"></i>
-                      </label>
+                    <div class="form-conts">
+                      <input type="text" class="krds-input disabled" placeholder="자동입력" value="EPKI Key값" readonly>
                     </div>
                   </div>
                 </div>
@@ -197,7 +180,7 @@
             <section class="form-section">
               <header class="section-header">
                 <span class="section-number">2</span>
-                <h2 class="section-title">소속정보를 입력해주세요.</h2>
+                <h2 class="section-title">소속정보</h2>
               </header>
 
               <div class="form-fields">
@@ -207,7 +190,7 @@
                     </div>
                     <div class="form-group">
                         <div class="form-conts">
-                            <input type="text" class="krds-input large" data-field="org-name" placeholder="정식 명칭으로 기재해주세요. 입력 시 목록이 나타납니다.">
+                            <input type="text" class="krds-input large" data-field="org-name" placeholder="정식 명칭으로 기재해주세요. 입력 시 목록이 나타납니다." value="공주중학교">
                             <!--학교 검색 리스트-->
                             <div class="search-result-box">
                                 <ul class="result-list">
@@ -392,17 +375,17 @@
                     </div>
                     <div class="form-group">
                         <div class="form-conts">
-                            <input type="text" class="krds-input large disabled" readonly data-field="org-region" placeholder="자동입력">
+                            <input type="text" class="krds-input large disabled" readonly data-field="org-region" placeholder="자동입력" value="공주">
                         </div>
                     </div>
                 </div>
 
-                <div class="form-box gradeBox" data-select="teacher1">
+                <div class="form-box">
                     <div class="form-tt">
                         <h4>급별</h4>
                     </div>
                     <div class="form-group">
-                        <input type="radio" class="square-btn hide-input" id="kindergarten" name="grade">
+                        <input type="radio" class="square-btn hide-input" id="kindergarten" name="grade" checked>
                         <input type="radio" class="square-btn hide-input" id="elementary" name="grade">
                         <input type="radio" class="square-btn hide-input" id="middle" name="grade">
                         <input type="radio" class="square-btn hide-input" id="high" name="grade">
@@ -443,7 +426,7 @@
                             </div>
                             <!-- 유치원 선택하면 나타남 -->
                             <div class="kindergarten-type">
-                                <input type="radio" class="square-btn type hide-input" id="single" name="kindergarten-type">
+                                <input type="radio" class="square-btn type hide-input" id="single" name="kindergarten-type" checked>
                                 <label for="single" class="square-label">
                                     <span>단설유</span>
                                     <i class="radio-icon minus"></i>
@@ -465,48 +448,6 @@
                     </div>
                 </div>
 
-                <div class="form-box gradeBox" data-select="teacher2">
-                    <div class="form-tt">
-                        <h4>급별</h4>
-                    </div>
-                    <div class="form-group">
-                        <div class="form-conts grade-box">
-                            <div class="grade-select">
-                                <input type="radio" class="square-btn hide-input" id="kindergarten-t2" name="grade-t2">
-                                <label for="kindergarten-t2" class="square-label">
-                                    <span>유치원</span>
-                                    <i class="radio-icon"></i>
-                                </label>
-                                <input type="radio" class="square-btn hide-input" id="elementary-t2" name="grade-t2">
-                                <label for="elementary-t2" class="square-label">
-                                    <span>초등</span>
-                                    <i class="radio-icon"></i>
-                                </label>
-                                <input type="radio" class="square-btn hide-input" id="middle-t2" name="grade-t2">
-                                <label for="middle-t2" class="square-label">
-                                    <span>중등</span>
-                                    <i class="radio-icon"></i>
-                                </label>
-                                <input type="radio" class="square-btn hide-input" id="high-t2" name="grade-t2">
-                                <label for="high-t2" class="square-label">
-                                    <span>고등</span>
-                                    <i class="radio-icon"></i>
-                                </label>
-                                <input type="radio" class="square-btn hide-input" id="special-t2" name="grade-t2">
-                                <label for="special-t2" class="square-label">
-                                    <span>특</span>
-                                    <i class="radio-icon"></i>
-                                </label>
-                                <input type="radio" class="square-btn hide-input" id="each-t2" name="grade-t2">
-                                <label for="each-t2" class="square-label">
-                                    <span>각</span>
-                                    <i class="radio-icon"></i>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="form-box">
                     <div class="form-tt">
                         <h4>설립구분</h4>
@@ -514,7 +455,7 @@
                     <div class="form-group">
                         <div class="form-conts">
                             <div class="grade-select establish">
-                                <input type="radio" class="square-btn hide-input" id="establish-01" name="establish-type">
+                                <input type="radio" class="square-btn hide-input" id="establish-01" name="establish-type" checked>
                                 <label for="establish-01" class="square-label">
                                     <span>공립</span>
                                     <i class="radio-icon"></i>
@@ -536,36 +477,102 @@
                     </div>
                 </div>
 
+                <div class="form-box">
+                  <div class="form-tt">
+                    <h4>학급수(입력일기준)</h4>
+                  </div>
+                  <div class="form-group">
+                    <div class="form-conts">
+                        <div class="form-group-inner">
+                            <input type="text" class="krds-input number-input" placeholder="학급수를 입력해주세요.">
+                            <span>학급</span>
+                        </div>
+                    </div>
+                  </div>
+                </div>
 
-
-
-
+                <div class="form-box">
+                  <div class="form-tt">
+                    <h4>학생수(입력일기준)</h4>
+                  </div>
+                  <div class="form-group">
+                    <div class="form-conts">
+                        <div class="form-group-inner">
+                            <input type="text" class="krds-input number-input" placeholder="학생수를 입력해주세요.">
+                            <span>명</span>
+                        </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </section>
 
-            <!-- 개인정보 수집·이용 내역 -->
+            <!-- Section 3: 기타정보 -->
             <section class="form-section">
-              <div class="form-box">
-                <div class="form-tt">
-                  <h4>개인정보 수집·이용 내역</h4>
-                </div>
-                <div class="form-group">
-                  <div class="privacy-box">
-                    <ul class="privacy-list">
-                      <li>항목 : 이름, 연락처, 이메일</li>
-                      <li>수집 이용 목적 : 사업신청, 공모사업모집, </li>
-                      <li>보유 이용기간 : 회원탈퇴시까지</li>
-                    </ul>
-                  </div>
-                  <p class="privacy-notice">
-                    위의 개인정보 수집·이용에 대한 동의를 거부할 권리가 있습니다. 그러나 동의를 거부할 경우 가입이 제한됩니다. <br>위와 같이 개인정보 수집·이용하는데 동의하십니까?
-                  </p>
-                  <div class="krds-check-area">
-                    <div class="krds-form-check medium">
-                      <input type="checkbox" id="privacy-agree" name="privacy-agree">
-                      <label for="privacy-agree">개인정보 수집 이용에 동의합니다.</label>
+              <header class="section-header">
+                <span class="section-number">3</span>
+                <h2 class="section-title">기타정보</h2>
+              </header>
+
+              <div class="form-fields">
+                <div class="form-box">
+                    <div class="form-tt">
+                        <h4>회원 상태(승인여부)</h4>
                     </div>
-                  </div>
+                    <div class="form-conts">
+                        <select class="krds-form-select judge-result" title="승인여부 선택">
+                            <option value="rejected">미승인</option>
+                            <option value="selected">승인</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-box">
+                    <div class="form-tt">
+                        <h4>학교관리자</h4>
+                    </div>
+                    <div class="form-conts">
+                        <select class="krds-form-select judge-result" title="승인여부 선택">
+                            <option value="rejected">미승인</option>
+                            <option value="selected">승인</option>
+                        </select>
+                    </div>
+                </div>
+
+                 <div class="form-box">
+                    <div class="form-tt">
+                        <h4>등록일</h4>
+                    </div>
+                    <div class="form-conts">
+                        <p class="readonly-txt">2025-02-14 13:22</p>
+                    </div>
+                </div>
+
+                <div class="form-box">
+                    <div class="form-tt">
+                        <h4>최근접속일</h4>
+                    </div>
+                    <div class="form-conts">
+                        <p class="readonly-txt">2025-02-14 13:22</p>
+                    </div>
+                </div>
+
+                <div class="form-box">
+                    <div class="form-tt">
+                        <h4>수정일</h4>
+                    </div>
+                    <div class="form-conts">
+                        <p class="readonly-txt">2025-02-14 13:22</p>
+                    </div>
+                </div>
+
+                <div class="form-box">
+                    <div class="form-tt">
+                        <h4>IP</h4>
+                    </div>
+                    <div class="form-conts">
+                        <p class="readonly-txt">122.000.000.000</p>
+                    </div>
                 </div>
               </div>
             </section>
@@ -573,7 +580,7 @@
             <div class="page-btn-wrap wp100">
               <div class="btn-wrap">
                 <button type="button" class="krds-btn tertiary">취소하기</button>
-                <button type="submit" class="krds-btn primary">가입하기</button>
+                <button type="submit" class="krds-btn primary">수정하기</button>
               </div>
             </div>
           </div>
