feat(page):임의페이지 생성 및 코드 수정

--- a/adm/html/program-list.html
+++ b/adm/html/program-list.html
@@ -227,7 +227,7 @@
                       <span class="krds-badge small custom-bd bg-light-point">미승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -300,7 +300,7 @@
                       <span class="krds-badge small custom-bd bg-light-success">승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -373,7 +373,7 @@
                       <span class="krds-badge small custom-bd bg-light-success">승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -446,7 +446,7 @@
                       <span class="krds-badge small custom-bd bg-light-success">승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -519,7 +519,7 @@
                       <span class="krds-badge small custom-bd bg-light-success">승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -592,7 +592,7 @@
                       <span class="krds-badge small custom-bd bg-light-success">승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -665,7 +665,7 @@
                       <span class="krds-badge small custom-bd bg-light-success">승인</span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/program-modify-step1.html" target="_self" class="krds-btn small line" title="수정">
                         <i class="svg-icon ico-edit">수정</i>
                       </a>
                     </td>
@@ -676,7 +676,7 @@
 
             <div class="page-btn-wrap">
               <div class="btn-wrap">
-                <a href="javascript:void(0)" class="krds-btn small primary">등록</a>
+                <a href="../html/program-create-step1.html" target="_self" class="krds-btn small primary">등록</a>
               </div>
             </div>
           </div>
