chore:메인 텍스트 및 스타일링 수정

--- a/kr/html/common-main.html
+++ b/kr/html/common-main.html
@@ -43,7 +43,7 @@
             <div class="hero-inner">
                 <div class="hero-content">
                     <h1 class="hero-title">단위학교 사업선택제</h1>
-                    <p>단위학교에서 <strong>교육과정 운영 효율성</strong>을 높이는데 필요한 사업이 있으면<br>구성원들이 협의를 통해 신청하고 교육청이 이를 심사하여 <strong>예산을 지원하는 제도</strong> 입니다.</p>
+                    <p>2021년부터 시행한 상향식 사업 추진 방식으로 도교육청 모든 공모사업을 통합 안내하고 <span class="block"><b>학교가 주체적으로 사업을 선택·운영</b>함으로써 학교의 <b>선택권과 자율권을 확대</b>하기 위한 제도</span></p>
                 </div>
                 <div class="hero-search">
                     <div class="search-box">
@@ -71,8 +71,8 @@
                         <p class="card-subtitle">(교당 1개 선정 가능)</p>
                     </div>
                     <p class="card-description">
-                        교당 지원금 3,000만원 이상 시설환경 개선<br>
-                        지원 사업, 5,000만원 이상 프로그램 지원 사업<br>(유치원 대상사업 2개 포함)
+                        교당 지원금 3,000만원 이상 시설환경 개선 사업,
+                        <span class="block">5,000만원 이상 프로그램 지원 사업</span>
                     </p>
                 </div>
                 <div class="card-icon card-icon-1"></div>
@@ -88,7 +88,8 @@
                         <p class="card-subtitle">(교당 3개 선정 가능)</p>
                     </div>
                     <p class="card-description">
-                        교당 지원금3,000만원 미만 시설환경 개선 사업, 5,000만원 미만 프로그램 지원 사업
+                        교당 지원금 3,000만원 미만 시설환경 개선 사업,
+                        <span class="block">5,000만원 미만 프로그램 지원 사업</span>
                     </p>
                 </div>
                 <div class="card-icon card-icon-2"></div>
@@ -104,29 +105,11 @@
                         <p class="card-subtitle">(신청제한 없음)</p>
                     </div>
                     <p class="card-description">
-                        교사 개인이 선택하여 학급 또는 동아리 단위<br>
-                        학생 지원 사업, 학교 신청이 어려운 정책사업
+                        학급 또는 동아리 활동을 지원하는 사업,
+                        <span class="block">정책상 교육청에서 권장하는 사업</span>
                     </p>
                 </div>
                 <div class="card-icon card-icon-3"></div>
-                <div class="card-arrow" aria-label="자세히 보기">
-                    <div class="arrow-icon"></div>
-                </div>
-            </a>
-            <a href="" class="card">
-                <i class="link_icon">더보기</i>
-                <div class="card-content">
-                    <div class="card-header">
-                        <h2>특교·추경신규 사업</h2>
-                        <p class="card-subtitle">(신청제한 없음)</p>
-                    </div>
-                    <p class="card-description">
-                        사업선택제 운영 시기 및 선정 방법 등 일원화하여<br>
-                        추진하기 어려운 교육부 특별교부금 지원사업,<br>
-                        또는 추가경정예산 확보로 당해연도 신규 모집하는 사업
-                    </p>
-                </div>
-                <div class="card-icon card-icon-4"></div>
                 <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
                 </div>
@@ -139,10 +122,28 @@
                         <p class="card-subtitle">(교당 1개 선정 가능)</p>
                     </div>
                     <p class="card-description">
-                        선택,선택외,개방형사업 외 학교 운영상 필요한 사업으로, 구성원 협의를 통해 자율적으로 계획하여 신청하는 사업
+                        학교 운영상 필요한 사업으로, 학교 구성원 협의를 통해
+                        <span class="block">주체적으로 계획하여 신청하는 사업</span>
                     </p>
                 </div>
                 <div class="card-icon card-icon-5"></div>
+                <div class="card-arrow" aria-label="자세히 보기">
+                    <div class="arrow-icon"></div>
+                </div>
+            </a>
+            <a href="" class="card">
+                <i class="link_icon">더보기</i>
+                <div class="card-content">
+                    <div class="card-header">
+                        <h2>특교·추경신규 사업</h2>
+                        <p class="card-subtitle">(신청제한 없음)</p>
+                    </div>
+                    <p class="card-description">
+                        운영 시기･선정 방법 등을 일원화하여 추진하기 어려운 
+                        <span class="block">교육부 특별교부금 지원 사업, 추가경정예산 신규확보 사업</span>
+                    </p>
+                </div>
+                <div class="card-icon card-icon-4"></div>
                 <div class="card-arrow" aria-label="자세히 보기">
                     <div class="arrow-icon"></div>
                 </div>
