chore:텍스트 수정

--- a/kr/html/common-intro.html
+++ b/kr/html/common-intro.html
@@ -104,7 +104,7 @@
                 <!-- item 2 -->
                 <div class="intro-feature-item">
                     <div class="intro-feature-bubble">
-                        획일적인 사업과 일률적인 카테고리로&nbsp;
+                        획일적인 사업과 일률적인 커리큘럼으로&nbsp;
                         <span class="block">선택의 폭이 좁고 사업 운영이 어려움</span>
                     </div>
 
@@ -287,7 +287,7 @@
                     </div>
                 </article>
             </div>
-            <p class="intro-program-note"><i class="svg-icon ico-tooltip samll"></i>사업 유형별로 신청 제한 횟수가 있으니 유의하여 주시기 바랍니다.</p>
+            <p class="intro-program-note"><i class="svg-icon ico-tooltip samll"></i>사업 유형별로 <b>신청 제한 횟수</b>가 있으니 유의하여 주시기 바랍니다.</p>
         </section>
 
         <!-- 4. 운영안내 -->
@@ -361,7 +361,7 @@
         <section class="intro-section intro-section-steps" id="intro-steps" data-nav-theme="steps">
             <div class="intro-section-head">
                 <p class="intro-section-kicker">학교가 해야 할 일, 무엇일까요?</p>
-                <h3 class="intro-section-title">사업 신청부터 결과보고까지 이대로만 하시면 돼요!</h3>
+                <h3 class="intro-section-title">사업선택제, 이대로만 하세요!</h3>
             </div>
 
             <ol class="intro-step-list">
