--- a/kr/html/report-mypage-list.html
+++ b/kr/html/report-mypage-list.html
@@ -443,6 +443,10 @@
                     </tbody>
                 </table>
                 </div>
+                
+                <div class="page-btn-wrap m-column">
+                    <a href="#" class="krds-btn large tertiary" id="btn-back">회수하기</a>
+                </div>
             </div>
             <!-- //tab contents -->
         </div>
