user관리자모드 선택버튼추가

--- a/kr/tmpl/header_sch_adm.html
+++ b/kr/tmpl/header_sch_adm.html
@@ -16,6 +16,14 @@
 
         <!-- Utility Menu -->
         <div class="utility">
+            <a href="#" class="utility-item admuser_on">
+                <img src="../img/ico_admuser_on.svg">
+                <span>관리자모드</span>
+            </a>
+            <a href="#" class="utility-item admuser_off">
+                <img src="../img/ico_admuser_off.svg">
+                <span>관리자모드</span>
+            </a>
             <a href="#" class="utility-item">
                 <img src="../img/ico_edit.svg">
                 <span>정보수정</span>
