admuser선택 버튼 추가

--- a/kr/tmpl/header_sch_adm.html
+++ b/kr/tmpl/header_sch_adm.html
@@ -20,10 +20,10 @@
                 <img src="../img/ico_admuser_on.svg">
                 <span>관리자모드</span>
             </a>
-            <a href="#" class="utility-item admuser_off">
+            <!-- <a href="#" class="utility-item admuser_off">
                 <img src="../img/ico_admuser_off.svg">
                 <span>관리자모드</span>
-            </a>
+            </a> -->
             <a href="#" class="utility-item">
                 <img src="../img/ico_edit.svg">
                 <span>정보수정</span>
