chore:스타일가이드 수정

--- a/_common/resources/html/badge.html
+++ b/_common/resources/html/badge.html
@@ -238,6 +238,39 @@
     </div>
 </div>
 
+
+<strong>icon::state</strong>
+<div class="g-example-inner flex-dire-col">
+    <div class="krds-badge-wrap">
+        <span class="subtitle">small</span>
+
+        <span class="krds-badge text-bd small" title="완료">
+            <i class="svg-icon ico-success-fill"></i>
+        </span>
+
+        <span class="krds-badge text-bd small" title="결재중">
+            <i class="svg-icon ico-yeling-fill"></i>
+        </span>
+
+        <span class="krds-badge text-bd small" title="반려">
+            <i class="svg-icon ico-reject-fill"></i>
+        </span>
+
+        <span class="krds-badge text-bd small" title="반송">
+            <i class="svg-icon ico-return-fill"></i>
+        </span>
+
+        <span class="krds-badge text-bd small" title="미선정">
+            <i class="svg-icon ico-danger-fill"></i>
+        </span>
+
+        <span class="krds-badge text-bd small" title="없음">
+            <i class="svg-icon ico-minus disabled"></i>
+        </span>
+
+    </div>
+</div>
+
 <strong>icon-text::state</strong>
 <div class="g-example-inner flex-dire-col">
     <div class="krds-badge-wrap">
@@ -273,9 +306,9 @@
             <span>미선정</span>
         </span>
 
-        <span class="krds-badge text-bd small">
+        <span class="krds-badge text-bd small" title="없음">
             <i class="svg-icon ico-minus disabled"></i>
-            <span class="sr-only">해당없음</span>
+            <span class="sr-only">없음</span>
         </span>
 
     </div>
