--- a/_common/resources/html/badge.html
+++ b/_common/resources/html/badge.html
@@ -264,6 +264,10 @@
             <i class="svg-icon ico-danger-fill"></i>
         </span>
 
+        <span class="krds-badge text-bd small" title="임시저장">
+            <i class="svg-icon ico-yelinfo-fill"></i>
+        </span>
+
         <span class="krds-badge text-bd small" title="없음">
             <i class="svg-icon ico-minus disabled"></i>
         </span>
@@ -304,6 +308,11 @@
         <span class="krds-badge text-bd small">
             <i class="svg-icon ico-danger-fill"></i>
             <span>미선정</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="svg-icon ico-yelinfo-fill"></i>
+            <span>임시저장</span>
         </span>
 
         <span class="krds-badge text-bd small" title="없음">
