--- a/adm/html/operation-privacy-view.html
+++ b/adm/html/operation-privacy-view.html
@@ -41,7 +41,7 @@
   <header id="header"></header>
 
   <main id="container" class="page-edit">
-    <div class="inner">
+    <div class="inner max-wd-12">
         <strong class="page-title">신규 등록</strong>
         <div class="section contents-box contents-box-shadow">
             <div class="section-header">
