style:스타일 추가

--- a/_common/resources/html/badge.html
+++ b/_common/resources/html/badge.html
@@ -281,7 +281,7 @@
         <span class="subtitle">small</span>
 
         <span class="krds-badge text-bd small">
-            <i class="svg-icon ico-success-fill"></i>
+            <i class="svg-icon ico-send-fill"></i>
             <span class="">제출완료</span>
         </span>
 
