--- a/_common/resources/html/button.html
+++ b/_common/resources/html/button.html
@@ -5,6 +5,75 @@
     <button type="button" class="krds-btn tertiary">버튼 : tertiary</button>
 </div>
 
+<strong>버튼 상태(시스템)</strong>
+<div class="g-example-inner flex-dire-col">
+    <div class="krds-btn-wrap">
+        <span class="subtitle">success</span>
+        <button type="button" class="krds-btn primary medium success">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium success">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium success">버튼 : tertiary</button>
+    </div>
+    <div class="krds-btn-wrap">
+        <span class="subtitle">success hover</span>
+        <button type="button" class="krds-btn primary medium success hover">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium success hover">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium success hover">버튼 : tertiary</button>
+    </div>
+    
+    <div class="krds-btn-wrap">
+        <span class="subtitle">danger</span>
+        <button type="button" class="krds-btn primary medium danger">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium danger">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium danger">버튼 : tertiary</button>
+    </div>
+    <div class="krds-btn-wrap">
+        <span class="subtitle">danger hover</span>
+        <button type="button" class="krds-btn primary medium danger hover">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium danger hover">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium danger hover">버튼 : tertiary</button>
+    </div>
+
+    <div class="krds-btn-wrap">
+        <span class="subtitle">warning</span>
+        <button type="button" class="krds-btn primary medium warning">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium warning">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium warning">버튼 : tertiary</button>
+    </div>
+    <div class="krds-btn-wrap">
+        <span class="subtitle">warning hover</span>
+        <button type="button" class="krds-btn primary medium warning hover">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium warning hover">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium warning hover">버튼 : tertiary</button>
+    </div>
+
+    <div class="krds-btn-wrap">
+        <span class="subtitle">point</span>
+        <button type="button" class="krds-btn primary medium point">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium point">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium point">버튼 : tertiary</button>
+    </div>
+     <div class="krds-btn-wrap">
+        <span class="subtitle">point hover</span>
+        <button type="button" class="krds-btn primary medium point hover">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium point hover">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium point hover">버튼 : tertiary</button>
+    </div>
+
+    <div class="krds-btn-wrap">
+        <span class="subtitle">disabled 클래스</span>
+        <button type="button" class="krds-btn primary medium disabled">버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium disabled">버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium disabled">버튼 : tertiary</button>
+    </div>
+
+    <div class="krds-btn-wrap">
+        <span class="subtitle">disabled 속성</span>
+        <button type="button" class="krds-btn primary medium" disabled>버튼 : primary </button>
+        <button type="button" class="krds-btn secondary medium" disabled>버튼 : secondary</button>
+        <button type="button" class="krds-btn tertiary medium" disabled>버튼 : tertiary</button>
+    </div>
+</div>
+
 <strong>버튼 사이즈</strong>
 <div class="g-example-inner">
     <button type="button" class="krds-btn xsmall">x-small 버튼</button>
