--- a/_common/resources/html/icon.html
+++ b/_common/resources/html/icon.html
@@ -144,6 +144,7 @@
     <i class="svg-icon ico-flag"></i>
     <i class="svg-icon ico-help"></i>
     <i class="svg-icon ico-success-fill"></i>
+    <i class="svg-icon ico-send-fill"></i>
     <i class="svg-icon ico-information-fill"></i>
     <i class="svg-icon ico-error-fill"></i>
     <i class="svg-icon ico-complete-fill"></i>
